fix on especialidades section flex content and align container

--- a/estilos/disp_movel.css
+++ b/estilos/disp_movel.css
@@ -48,17 +48,17 @@
     }
     /* Especialidades */
     section.especialidades{
-        padding-top: 10%;
-        align-items: center;
-        width: 30vw;
+        padding-top: 2%;
     }
     h2.titulo{
         padding-bottom: 4%;
     }
     div.especialidades-box{
-       padding-bottom: 5%;
         position: relative;
-        display: inline-block;
+        display: flex;
+        width: 100%;
+        padding-bottom: 5%;
+        
     }
     div.especialidade-box > h3{
         text-align: center;
