--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -225,31 +225,41 @@ section.topo-do-site .flex{
 }
 /* Estilos das especialidades */
 section.especialidades{
-    display: inline;
-    text-align: center;
-    padding-top: 5%;
     margin: 5%;
+    padding-bottom: 3%;
 }
-section.especialidades .flex{
-    gap: 60px;
+.interface_lingua {
+    position: relative;
+    display: block;
     text-align: center;
 }
-.especialidades .especialidade-box{
-    color: white;
-    padding: 40px;
-    border-radius: 20px;
+
+div.linguages{
+    display: inline;
+    align-items: center;
+    padding-bottom: 2%;
+    padding: 4%;
+
+}
+.especialidade-box{
+    display: inline-block;
+    align-content: center;
+    color: rgb(76, 30, 30);
+    border-radius: 7%;
     margin-top: 5%;
     transition: .2s;
+    width: 17vw;
+    height: 30vh;
 }
-.especialidades .especialidade-box:hover{
+.especialidade-box:hover{
     transform: scale(1.05);
     box-shadow: 0px 0px 15px black;
 }
 .especialidade-box img{
-    width: 35px;
+    width: 2vw;
 }
 
-.especialidades .especialidade-box h3{
+.especialidade-box h3{
     font-size: 20px;
     margin: 15px 0px;
 }
